# mac-acl-python

./: README.md  pyproject.toml  setup.py  tk.py
mac_acl/: app.py  mikrotik.py  pyqt.py  settings.py  tk.py  ubiquiti.py  ubuquiti.py
tests/: MikrotikACL_test.py  UbiquitiACL_test.py
